--- a/style/style.scss
+++ b/style/style.scss
@@ -165,5 +165,8 @@ $naranja: #ffc107;
     body {
         box-sizing: border-box;
         width: 100%;
+        margin-left: 0;
+        margin-right: 0;
+        
     }
 }
