--- a/style/_scotty.scss
+++ b/style/_scotty.scss
@@ -111,5 +111,8 @@
     body {
         box-sizing: border-box;
         width: 100%;
+        margin-left: 0;
+        margin-right: 0;
+        
     }
 }
