--- a/style/_videos.scss
+++ b/style/_videos.scss
@@ -85,5 +85,8 @@
     body {
         box-sizing: border-box;
         width: 100%;
+        margin-left: 0;
+        margin-right: 0;
+        
     }
 }
