--- a/style/style.css
+++ b/style/style.css
@@ -20,86 +20,76 @@ body .text-danger {
   color: #dc3545;
 }
 
-.header .headerImage {
-  width: 100%;
-  text-align: center;
-}
-.header .headerImage img {
-  max-width: 100%;
-  height: auto;
-}
-.header h1 {
-  font-family: Trebuchet MS, sans-serif;
-  font-size: clamp(3rem, 8vw, 10rem);
-  letter-spacing: 0.05em;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-  margin-top: 2rem;
-  color: white;
-  text-align: center;
-  flex-wrap: wrap;
-  overflow-wrap: break-word;
-  height: auto;
-}
-.header h2 {
-  font-family: Trebuchet MS, sans-serif;
-  font-size: clamp(2.5rem, 6vw, 8rem);
-  letter-spacing: 0.05em;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-  color: #e60127;
-  font-style: italic;
-  text-align: center;
-  margin-top: 2rem;
-  margin-bottom: 1rem;
-  flex-wrap: wrap;
-  overflow-wrap: break-word;
-}
-
-.naviBar {
-  width: 80%;
-  margin: 0 auto;
-  background-color: #000000;
-}
-.naviBar nav button {
-  background-color: #000000;
-  border-color: #ffc107;
-}
-.naviBar nav #navbarContent a {
-  font-size: clamp(2rem, 2vw, 6rem);
-}
-.naviBar nav .navbar-nav {
-  flex-wrap: wrap;
-}
-.naviBar nav .navbar-nav .nav-link {
-  color: #ffc107;
-  transition: all 0.5s ease;
-}
-.naviBar nav .navbar-nav .nav-link:hover {
-  color: #e60127;
-  transform: scale(1.2);
-}
-
-.navbar-toggler {
-  display: flex;
-  justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.headerImage {
-  width: auto;
-  margin: 10px auto;
-}
-.headerImage img {
-  width: 100%;
-  height: auto;
-}
-
 hr {
   width: 80%;
   height: 2px;
   background: linear-gradient(to left, #ffc107, #dc3545);
   margin: 40px auto;
   border: none;
+}
+
+.header .headerImage {
+  width: 100%;
+}
+.header .headerImage img {
+  width: 100%;
+  height: auto;
+}
+.header h1 {
+  font-family: Trebuchet MS, sans-serif;
+  font-size: clamp(4rem, 4vw, 7rem);
+  letter-spacing: 0.05em;
+  color: white;
+  text-align: center;
+  flex-wrap: wrap;
+  overflow-wrap: break-word;
+  height: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.header h2 {
+  font-family: Trebuchet MS, sans-serif;
+  font-size: clamp(2rem, 4vw, 5rem);
+  letter-spacing: 0.05em;
+  color: #e60127;
+  font-style: italic;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
+  overflow-wrap: break-word;
+}
+.header hr {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+nav {
+  width: 80%;
+  margin: 0 auto;
+  background-color: #000000;
+}
+nav .navbar-toggler {
+  background-color: #000000;
+  border-color: #ffc107;
+}
+nav #navbarContent .navbar-nav {
+  flex-wrap: wrap;
+}
+nav #navbarContent .navbar-nav .nav-link {
+  font-size: clamp(1rem, 2vw, 1.5rem);
+  color: #ffc107;
+  transition: all 0.5s ease;
+}
+nav #navbarContent .navbar-nav .nav-link:hover {
+  color: #e60127;
+  transform: scale(1.2);
+}
+nav .navbar-toggler {
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .footer {
@@ -129,6 +119,33 @@ hr {
   transform: scale(1.2);
 }
 
+/*Global Media Queries*/
+@media (max-width: 1024px) {
+  * {
+    margin: 5px;
+    padding: 0;
+  }
+}
+@media (max-width: 480px) {
+  * {
+    margin: 2vw;
+    padding: 0;
+  }
+  html {
+    /*global font-size declaration!! To use rem units off of!*/
+    background-color: #000000;
+  }
+  body {
+    background-color: #000000;
+    width: minmax(300px, 480px);
+    margin-left: 2vw;
+    margin-right: 2vw;
+    height: 100%;
+  }
+  body .text-danger {
+    color: #dc3545;
+  }
+}
 /*404 Page Styling*/
 .grid404 {
   display: grid;
@@ -137,17 +154,12 @@ hr {
   grid-auto-rows: auto;
   gap: 5px;
   margin: 20px;
-  padding: 20px;
   overflow-wrap: break-word;
-  grid-template-areas: "header" "hr1" "title404" "hr2" "scotty404" "caption404" "hr3" "footer";
+  grid-template-areas: "header" "title404" "hr1" "scotty404" "caption404" "hr2" "footer";
 }
 
 .header {
   grid-area: header;
-}
-
-.hr1 {
-  grid-area: hr1;
 }
 
 .title404 {
@@ -163,8 +175,8 @@ hr {
   text-align: center;
 }
 
-.hr2 {
-  grid-area: hr2;
+.hr1 {
+  grid-area: hr1;
 }
 
 .scotty404 {
@@ -204,8 +216,8 @@ hr {
   word-break: break-word;
 }
 
-.hr3 {
-  grid-area: hr3;
+.hr2 {
+  grid-area: hr2;
 }
 
 .footer {
@@ -235,9 +247,8 @@ hr {
   grid-template-rows: auto auto auto auto auto auto 1fr auto 1fr auto auto;
   gap: 5px;
   margin: 20px;
-  padding: 20px;
   overflow-wrap: break-word;
-  grid-template-areas: "header" "hr1" "aboutTitle" "hr2" "aboutBanner" "hr3" "aboutTexto1" "hr4" "aboutTexto2" "hr5" "aboutFoto2" "hr6" "footer";
+  grid-template-areas: "header" "aboutTitle" "hr2" "aboutBanner" "hr3" "aboutTexto1" "hr4" "aboutTexto2" "hr5" "aboutFoto2" "hr6" "footer";
 }
 
 .header {
@@ -365,9 +376,8 @@ hr {
   grid-template-rows: auto;
   gap: 5px;
   margin: 20px;
-  padding: 20px;
   overflow-wrap: break-word;
-  grid-template-areas: "header" "hr1" "programCarousel" "hr2" "programText" "hr3" "tableTitle" "table" "hr4" "footer";
+  grid-template-areas: "header" "programCarousel" "hr2" "programText" "hr3" "tableTitle" "table" "hr4" "footer";
 }
 
 .header {
@@ -509,10 +519,9 @@ hr {
   grid-auto-rows: auto;
   gap: 5px;
   margin: 20px;
-  padding: 20px;
   overflow-wrap: break-word;
   box-sizing: border-box;
-  grid-template-areas: "header" "hr1" "scottyI1" "hr2" "scottyT1" "hr3" "scottyT2" "hr4" "scottyCarousel" "hr5" "scottyT3" "hr6" "footer";
+  grid-template-areas: "header" "scottyI1" "hr2" "scottyT1" "hr3" "scottyT2" "hr4" "scottyCarousel" "hr5" "scottyT3" "hr6" "footer";
 }
 
 .header {
@@ -639,9 +648,8 @@ hr {
   grid-template-rows: auto;
   gap: 5px;
   margin: 20px;
-  padding: 20px;
   overflow-wrap: break-word;
-  grid-template-areas: "header" "hr1" "videoT1" "video1" "hr2" "videoT2" "video2" "hr3" "videoT3" "video3" "hr4" "footer";
+  grid-template-areas: "header" "videoT1" "video1" "hr2" "videoT2" "video2" "hr3" "videoT3" "video3" "hr4" "footer";
 }
 
 .header {
@@ -738,9 +746,8 @@ hr {
   grid-auto-rows: auto;
   gap: 5px;
   margin: 20px;
-  padding: 20px;
   overflow-wrap: break-word;
-  grid-template-areas: "header" "hr1" "mainGrid" "hr2" "indexTexto2" "hr3" "footer";
+  grid-template-areas: "header" "mainGrid" "hr2" "indexTexto2" "hr3" "footer";
 }
 
 .header {
@@ -788,7 +795,7 @@ hr {
   grid-area: indexTexto1;
   overflow: visible;
 }
-.mainGrid .indexTexto1 .textContainer p {
+.mainGrid .indexTexto1 p {
   font-family: Arial, "Arial Unicode MS", Helvetica, Sans-Serif;
   color: white;
   width: 100%;
